Fix navigation close on tablet/desktop view

--- a/components/Navigation/navigation.module.scss
+++ b/components/Navigation/navigation.module.scss
@@ -22,6 +22,10 @@
 
 .navigation__wrapper__active {
   transform: translateX(-100%);
+
+  @include largeTablet() {
+    transform: translateX(0);
+  }
 }
 
 .navigation {
